--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Image Background Text</title>
 </head>
 <body>
-    Hello
+    
+    <h1 class="heading">Test WebDev - Img Bckg Txt</h1>
+
 </body>
 </html>
