--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Image Background Text</title>
 </head>
 <body>
-    
-    <h1 class="heading">Test WebDev - Img Bckg Txt</h1>
+
+    <h1 class="heading">Image Background Text</h1>
 
 </body>
 </html>
