--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
     <h1 class="heading">Image Background Text</h1>
 
+<footer>
+    <small>Pics from: 'https://unsplash.com/s/photos/free-images'</small>
+</footer>
 </body>
 </html>
