--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1 class="heading">Image Background Text</h1>
 
 <footer>
-    <small>Pics from: 'https://unsplash.com/s/photos/free-images'</small>
+    <small>
+        Pics from: <a href="https://unsplash.com/s/photos/free-images">unsplash.com</a>
+    </small>
 </footer>
 </body>
 </html>
