--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1 class="heading">Image Background Text</h1>
+    <h1 class="heading">Image <br> Background <br> Text</h1>
 
 <footer>
     <small>
